[package]
name = "iroh-n0des"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "p2p quic connections dialed by public key"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-n0des"
keywords = ["quic", "networking", "holepunching", "p2p"]
rust-version = "1.81"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "2.0.1", features = ["from"] }
ed25519-dalek = "2.1.1"
irpc = "0.5.0"
irpc-iroh = "0.5.0"
iroh = "0.90"
iroh-metrics = "0.35"
n0-future = "0.1.2"
rand = "0.8"
rcan = { git = "https://github.com/n0-computer/rcan", branch = "main" }
serde = { version = "1.0.217", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45"
tracing = "0.1.41"
uuid = { version = "1.17", features = ["v4", "serde"] }
