[package]
name = "iroh-n0des"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "p2p quic connections dialed by public key"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-n0des"
keywords = ["quic", "networking", "holepunching", "p2p"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "2.0.1", features = ["display", "from"] }
ed25519-dalek = "2.1.1"
irpc = "0.5.0"
irpc-iroh = "0.5.0"
iroh = { version = "0.90", features = ["discovery-local-network"] }
iroh-n0des-macro = { path = "iroh-n0des-macro" }
iroh-metrics = "0.35"
n0-future = "0.1.2"
quinn = { package = "iroh-quinn", version = "0.14.0", default-features = false }
rand = "0.8"
rcan = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45"
tracing = "0.1.41"
uuid = { version = "1.17", features = ["v4", "serde", "v7"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
] }
serde_json = "1.0.140"

[dev-dependencies]
iroh-ping = { git = "https://github.com/Frando/iroh-ping", branch = "Frando/dont-close-endpoint" }

[workspace]
members = ["iroh-n0des-macro"]
