[package]
name = "iroh-n0des"
version = "0.4.0"
edition = "2024"
readme = "README.md"
description = "p2p quic connections dialed by public key"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-n0des"
keywords = ["quic", "networking", "holepunching", "p2p"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "2.0.1", features = ["display", "from"] }
ed25519-dalek = "3.0.0-pre.1"
irpc = "0.9.0"
irpc-iroh = { version = "0.9.0" }
iroh = { version = "0.93" }
iroh-n0des-macro = { version = "0.2.0", path = "iroh-n0des-macro" }
iroh-metrics = "0.36"
n0-future = "0.2.0"
quinn = { package = "iroh-quinn", version = "0.14.0", default-features = false }
rand = "0.9"
rcan = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
ssh-key = { version = "0.7.0-rc.3", features = ["ed25519"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45"
tracing = "0.1.41"
uuid = { version = "1.17", features = ["v4", "serde", "v7"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }
serde_json = "1.0.140"
bytes = { version = "1.10.1", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
futures-buffered = "0.2.12"
tokio-util = "0.7.16"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread"] }

[workspace]
members = ["iroh-n0des-macro"]

[features]

[[bin]]
name = "iroh-n0des"
path = "src/main.rs"
